vlib/v/checker/tests/cast_string_err.out
vlib/v/checker/tests/cast_string_err.v:2:14: error: cannot cast type `int` to string
    1 | fn main() {
    2 |     a := string(1)
      |                 ^
    3 |     println(a)
    4 | }
